--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-slick": "^0.23.13"
+    "@types/react-slick": "^0.23.13",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.4"
+
   }
 }
