--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_BASE_URL=https://backend.playstore.senetwallet.org/api
+REACT_APP_FRONTEND_URL=https://main--crypto-canyon-fall.netlify.app
